; ModuleID = '/home/carl/AnghaBench/micropython/ports/powerpc/extr_uart_potato.c_potato_uart_rx_empty.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/powerpc/extr_uart_potato.c_potato_uart_rx_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@POTATO_CONSOLE_STATUS = common dso_local global i32 0, align 4
@POTATO_CONSOLE_STATUS_RX_EMPTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @potato_uart_rx_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @potato_uart_rx_empty() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @POTATO_CONSOLE_STATUS, align 4
  %4 = call i32 @potato_uart_reg_read(i32 %3)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @POTATO_CONSOLE_STATUS_RX_EMPTY, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %11

10:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %10, %9
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @potato_uart_reg_read(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
